--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,37 @@
   box-sizing: border-box;
 }
 
+h1,
+h2,
+h3,
+p,
+a {
+  color: white;
+}
+
+h1 {
+  font-size: 3em;
+}
+
+h2 {
+  font-size: 2.5em;
+  text-decoration: underline;
+}
+
+h3 {
+  font-size: 2em;
+}
+
 body {
+  background: rgb(86, 128, 233);
+  background: linear-gradient(
+    162deg,
+    rgba(86, 128, 233, 1) 0%,
+    rgba(66, 99, 140, 1) 32%,
+    rgba(136, 96, 208, 1) 100%
+  );
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -26,4 +56,9 @@ button {
   padding: 1em;
   font-size: 1em;
   width: 125px;
+  text-transform: uppercase;
+  color: white;
+  letter-spacing: 1.2px;
+  background-color: #5680e9;
+  border: 1px solid #23325a;
 }
