color contrast on button/nav

--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,6 @@ button {
   text-transform: uppercase;
   color: white;
   letter-spacing: 1.2px;
-  background-color: #5680e9;
+  background-color: #3669ec;
   border: 1px solid #23325a;
 }
