--- a/src/Components/NoteDetails/NoteDetails.css
+++ b/src/Components/NoteDetails/NoteDetails.css
@@ -18,3 +18,32 @@
   padding: 1em;
   font-size: 1.1em;
 }
+
+@media screen and (min-width: 600px) {
+  .Main {
+    max-width: 50%;
+  }
+
+  h1 {
+    font-size: 5em;
+  }
+
+  h2 {
+    font-size: 3.5em;
+    text-decoration: underline;
+  }
+
+  h3 {
+    font-size: 3em;
+  }
+
+  p,
+  p.Main__note_details {
+    font-size: 1.4em;
+  }
+
+  button {
+    font-size: 1.3em;
+    width: 250px;
+  }
+}
