--- a/src/Components/NoteDetails/NoteDetails.css
+++ b/src/Components/NoteDetails/NoteDetails.css
@@ -43,7 +43,10 @@
   }
 
   button {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
     font-size: 1.3em;
-    width: 250px;
+    width: 150px;
   }
 }
