--- a/src/Components/NoteList/NoteList.css
+++ b/src/Components/NoteList/NoteList.css
@@ -3,6 +3,7 @@
   list-style-type: none;
   display: grid;
   grid-template-columns: 1fr;
+  grid-auto-rows: minmax(250px, 300px);
 }
 
 .Main.note_list a {
